--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,78 @@ body {
   color: #434455;
 }
 
-/* ================header================== */
-
-header {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
-.logo {
+ul {
+  list-style: none;
+  list-style-type: none;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-left: 0;
+}
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+button {
+  cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  width: 1440px;
+  margin: 0 auto;
+}
+
+/* ======================================== */
+
+/* ================header================== */
+
+.header-container {
+  display: flex;
+  border-bottom: 1px solid #e7e9fc;
+  background-color: #fff;
+  justify-content: space-between;
+}
+
+.header-navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -20,16 +86,27 @@ header {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 0px;
+  margin: 24px 76px 24px 156px;
 }
 
-.logo-name {
+.header-logo-name {
   color: #2e2f42;
 }
 
-.nav-list {
+.header-nav-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 40px;
 }
 
-.nav-link {
+.header-nav-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -37,30 +114,46 @@ header {
   color: #2e2f42;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.header-nav-link:hover,
+.header-nav-link:focus {
   color: #404bbf;
 }
 
-.address {
+.header-address-list {
+  display: flex;
+  align-items: center;
   font-style: normal;
+  flex-direction: row;
+  gap: 40px;
+  margin: 24px 156px 24px 0;
 }
-.address-link {
+.header-address-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-.address-link:hover,
-.address-link:focus {
+.header-address-link:hover,
+.header-address-link:focus {
   color: #404bbf;
 }
+
+/* ====================================== */
 
 /* ================hero================== */
 
 .hero-page {
   background: #2e2f42;
+}
+
+.hero-container {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 188px 472px;
+  gap: 48px;
 }
 
 .hero-title {
@@ -79,6 +172,10 @@ header {
   color: #fff;
   cursor: pointer;
   background: #4d5ae5;
+  padding: 16px 32px;
+  border-radius: 4px;
+  align-items: center;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .hero-button:hover,
@@ -86,18 +183,33 @@ header {
   background: #404bbf;
 }
 
-/* ================features==================== */
+/* ======================================= */
+
+/* ===============features================ */
 
 .features {
 }
 
-.visually-hidden {
+.features-container {
+  display: flex;
+  justify-content: center;
+  margin: 120px 156px;
 }
 
 .features-list {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 24px;
 }
 
 .features-item {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
+  width: calc((100% - 3 * 24px) / 4);
 }
 
 .features-subtitle {
@@ -114,10 +226,21 @@ header {
   letter-spacing: 0.02em;
 }
 
-/* ===============team=============== */
+/* ======================================= */
+
+/* =================team================== */
 
 .team {
   background: #f4f4fd;
+  display: flex;
+}
+
+.team-wrap {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 72px;
+  padding: 120px 156px;
 }
 
 .team-title {
@@ -130,13 +253,26 @@ header {
 }
 
 .team-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
 }
 
 .team-item {
   background: #fff;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.team-img {
+.team-description {
+  display: flex;
+  flex-direction: column;
+  margin: 32px 16px;
+  gap: 8px;
 }
 
 .team-subtitle {
@@ -156,9 +292,15 @@ header {
   text-align: center;
 }
 
+/* ======================================= */
+
 /* ===============portfolio=============== */
 
 .portfolio {
+}
+
+.portfolio-wrap {
+  padding: 120px 156px;
 }
 
 .portfolio-title {
@@ -168,13 +310,30 @@ header {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
 .portfolio-item {
   background: #fff;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 48px;
 }
 
-.portfolio-img {
+.portfolio-item-description {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  gap: 8px;
 }
 
 .portfolio-subtitle {
@@ -191,13 +350,23 @@ header {
   letter-spacing: 0.02em;
 }
 
-/* ===============footer=============== */
+/* ======================================= */
+
+/* ================footer================= */
 
 .footer {
   background: #2e2f42;
 }
 
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  padding: 100px 1020px 100px 156px;
+  gap: 16px;
+}
+
 .footer-logo {
+  display: flex;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
