--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ img {
 }
 
 .container {
-  max-width: 1158px;
+  width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -69,6 +69,10 @@ img {
 /* ======================================== */
 
 /* ================header================== */
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
 
 .header-container {
   display: flex;
@@ -96,7 +100,6 @@ img {
   justify-content: flex-start;
   flex-direction: row;
   gap: 0px;
-  margin: 24px 76px 24px 156px;
 }
 
 .header-logo-name {
@@ -109,6 +112,7 @@ img {
   justify-content: flex-start;
   flex-direction: row;
   gap: 40px;
+  margin-left: 76px;
 }
 
 .header-nav-link {
@@ -117,6 +121,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
 }
 
 .header-nav-link:hover,
@@ -130,8 +135,9 @@ img {
   font-style: normal;
   flex-direction: row;
   gap: 40px;
-  margin: 24px 156px 24px 0;
+  margin: 24px 0;
 }
+
 .header-address-link {
   font-size: 16px;
   line-height: 1.5;
@@ -150,6 +156,7 @@ img {
 
 .hero-page {
   background: #2e2f42;
+  padding: 188px 0;
 }
 
 .hero-container {
@@ -157,7 +164,7 @@ img {
   justify-items: center;
   align-items: center;
   flex-direction: column;
-  padding: 188px 316px;
+  padding: 0 316px;
   gap: 48px;
 }
 
@@ -167,9 +174,14 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
 }
 
 .hero-button {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -192,14 +204,6 @@ img {
 
 /* ===============features================ */
 
-.features {
-}
-
-.features-container {
-  display: flex;
-  justify-content: center;
-}
-
 .features-list {
   display: flex;
   align-items: center;
@@ -212,8 +216,7 @@ img {
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  gap: 8px;
-  width: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .features-subtitle {
@@ -222,6 +225,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .features-text {
@@ -239,13 +243,6 @@ img {
   display: flex;
 }
 
-.team-wrap {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 72px;
-}
-
 .team-title {
   font-size: 36px;
   line-height: 1.11;
@@ -253,6 +250,7 @@ img {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .team-list {
@@ -266,16 +264,14 @@ img {
   background: #fff;
   display: flex;
   flex-direction: column;
+  width: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-description {
-  display: flex;
-  flex-direction: column;
-  margin: 32px 16px;
-  gap: 8px;
+  padding: 32px 0;
 }
 
 .team-subtitle {
@@ -285,6 +281,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-text {
@@ -312,24 +309,21 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-item {
   background: #fff;
-  display: flex;
-  flex-direction: column;
   margin-bottom: 48px;
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-item-description {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
+  border: 1px solid #e7e9fc;
+  border-top: none;
   padding: 32px 16px;
-  gap: 8px;
+  margin-bottom: 8px;
 }
 
 .portfolio-subtitle {
@@ -352,17 +346,11 @@ img {
 
 .footer {
   background: #2e2f42;
-}
-
-.footer-content {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding: 100px 860px 100px 0;
+  padding: 100px 0;
 }
 
 .footer-logo {
-  display: flex;
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -370,6 +358,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-bottom: 16px;
 }
 
 .footer-logo-name {
@@ -380,4 +369,5 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
