--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ img {
   justify-content: flex-start;
   flex-direction: row;
   gap: 0px;
+  margin-right: 76px;
 }
 
 .header-logo-name {
@@ -112,7 +113,6 @@ img {
   justify-content: flex-start;
   flex-direction: row;
   gap: 40px;
-  margin-left: 76px;
 }
 
 .header-nav-link {
@@ -323,7 +323,6 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
-  margin-bottom: 8px;
 }
 
 .portfolio-subtitle {
@@ -332,6 +331,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .portfolio-text {
